--- a/first_local.html
+++ b/first_local.html
@@ -1,4 +1,3 @@
 <p>Something is better than nothing.</p>
 <br>
-<h2>Practice makes man perfect.</h2>
-<p>This is my first logcal file.(button)</p>
+<h2>Practice makes man perfect.(dropdown)</h2>
